feat(fix): device property data query
